@@ -15,41 +15,7 @@ use WWW::GoKGS::Scraper::TournGames;
 
 our $VERSION = '0.18';
 
-BEGIN { # install scrapers
-    my %scrapers = (
-        game_archives  => 'WWW::GoKGS::Scraper::GameArchives',
-        top_100        => 'WWW::GoKGS::Scraper::Top100',
-        tourn_list     => 'WWW::GoKGS::Scraper::TournList',
-        tourn_info     => 'WWW::GoKGS::Scraper::TournInfo',
-        tourn_entrants => 'WWW::GoKGS::Scraper::TournEntrants',
-        tourn_games    => 'WWW::GoKGS::Scraper::TournGames',
-    );
-
-    my %paths;
-    while ( my ($method, $class) = each %scrapers ) {
-        my $path = $paths{$class} = $class->build_uri->path;
-        my $body = sub { $_[0]->get_scraper($path) };
-        no strict 'refs';
-        *$method = $body;
-    }
-
-    sub __build_scrapers {
-        my $self = shift;
-        my $class = ref $self;
-
-        my %_scrapers;
-        while ( my ($scraper, $path) = each %paths ) {
-            $_scrapers{$path} = $scraper->new(
-                tree_builder_class => $class->tree_builder_class,
-                user_agent => $self->user_agent,
-            );
-        }
-
-        \%_scrapers;
-    }
-}
-
-sub tree_builder_class { 'HTML::TreeBuilder::XPath' }
+sub _tree_builder_class { 'HTML::TreeBuilder::XPath' }
 
 sub new {
     my $class = shift;
@@ -106,6 +72,40 @@ sub get {
 sub _scrapers {
     my $self = shift;
     $self->{_scrapers} ||= $self->__build_scrapers;
+}
+
+BEGIN { # install scrapers
+    my %scrapers = (
+        game_archives  => 'WWW::GoKGS::Scraper::GameArchives',
+        top_100        => 'WWW::GoKGS::Scraper::Top100',
+        tourn_list     => 'WWW::GoKGS::Scraper::TournList',
+        tourn_info     => 'WWW::GoKGS::Scraper::TournInfo',
+        tourn_entrants => 'WWW::GoKGS::Scraper::TournEntrants',
+        tourn_games    => 'WWW::GoKGS::Scraper::TournGames',
+    );
+
+    my %paths;
+    while ( my ($method, $class) = each %scrapers ) {
+        my $path = $paths{$class} = $class->build_uri->path;
+        my $body = sub { $_[0]->get_scraper($path) };
+        no strict 'refs';
+        *$method = $body;
+    }
+
+    sub __build_scrapers {
+        my $self = shift;
+        my $class = ref $self;
+
+        my %_scrapers;
+        while ( my ($scraper, $path) = each %paths ) {
+            $_scrapers{$path} = $scraper->new(
+                _tree_builder_class => $class->_tree_builder_class,
+                user_agent => $self->user_agent,
+            );
+        }
+
+        \%_scrapers;
+    }
 }
 
 sub get_scraper {
@@ -448,16 +448,6 @@ The scrapers assume the locale is set to C<en_US>, and the time zone C<GMT>.
 =head1 ENVIRONMENTAL VARIABLES
 
 =over 4
-
-=item WWW_GOKGS_LIBXML
-
-If set to true, this module uses L<HTML::TreeBuilder::LibXML>
-instead of L<HTML::TreeBuilder::XPath> to parse HTML documents.
-Make sure to install the alternative module in addition to this module
-before you enable the flag.
-
-  BEGIN { $ENV{WWW_GOKGS_LIBXML} = 1 }
-  use WWW::GoKGS;
 
 =item AUTHOR_TESTING
 
